<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background_gradient"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ResultActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/result_screen_img_soccer_trophy"
        android:src="@drawable/soccer_trophy" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="32dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/text_view_congrats"
            android:textAlignment="textEnd"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_player_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="Nome" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_view_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        tools:text="Você obteve X pontos de 10" />

    <Button
        android:id="@+id/btn_play_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_button"
        android:text="@string/btn_play_again"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_button"
        android:text="@string/btn_finish"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>