<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:background="@drawable/background_gradient"
    tools:context=".QuizzQuestionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/text_question"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/img_crest"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            tools:src="@drawable/boavista"
            android:contentDescription="@string/content_description_crest_image" />

        <LinearLayout
            android:id="@+id/ll_progress_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:indeterminate="false"
                android:max="10"
                android:minHeight="50dp"
                android:progress="0" />

            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:textColorHint="@color/light_yellow"
                android:textSize="14sp"
                tools:text="0/10" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_view_option_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:text="Alternativa 1" />

        <TextView
            android:id="@+id/text_view_option_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:text="Alternativa 2" />

        <TextView
            android:id="@+id/text_view_option_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:text="Alternativa 3" />

        <TextView
            android:id="@+id/text_view_option_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:text="Alternativa 4" />
        
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_button"
            android:text="@string/btn_answer_check"
            android:textColor="@color/light_cream"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>


</ScrollView>